2009-02-23 Borut Razem <borut.razem AT siol.net>

	* as/z80/asexpr.c: fixed bug #1829678: Z-80 CP A,<xxx> assembly
	  it is already fixed for mcs51 and hc08 targets
	* as/z80/z80mch.c: fixed bug #1704376: missing as-z80 errors

2009-02-22 Borut Razem <borut.razem AT siol.net>

	* device/lib/Makefile.in: fixed parenthesis error
	* doc/sdccman.lyx: fixed webdocs bug #2071421: error in the manual,
	  fixed webdocs bug #1967920: --version

2009-02-18 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/include/mcs51/at89c51ed2.h: fixed bug #2071949 bitmask RBCK wrong

2009-02-17 Maarten Brock <sourceforge.brock AT dse.nl>

	* as/link/mcs51/lkihx.c (hexRecord): bugfix do not insert extended address
	  when addresses are unsorted

2009-02-15 Frieder Ferlemann <Frieder.Ferlemann AT web.de>

	* device/include/mcs51/p89v66x.h: added ENBOOT thanks
	  Gudjon Gudjonsson <gudjon AT gudjon.org>
	* device/include/mcs51/p89c66x.h: fixed some defines
	* device/include/mcs51/p89v66x.h: fixed some sbit addresses
	* doc/sdccman.lyx: added <NO FLOAT> to index, try to reanimate
	  svn keywords

2009-02-14 Borut Razem <borut.razem AT siol.net>

	* doc/sdccman.lyx: corrected cpp info

2009-02-13 Borut Razem <borut.razem AT siol.net>

	* as/Makefile.in: *.doc renamed to *.txt

2009-02-11 Borut Razem <borut.razem AT siol.net>

	* as/doc/aslnk.doc, as/doc/abstra.doc: renamed to *.txt
	* as/doc/aslnk.txt, as/doc/asxhtml.html: changed licens to GPLv3

2009-02-11 Borut Razem <borut.razem AT siol.net>

	* doc/sdccman.lyx: documented ar format libraries

2009-02-10 Frieder Ferlemann <Frieder.Ferlemann AT web.de>

	* support/regression/tests/float_single.c: added regression
	  test. Some testpoints for probably rarely used functions
	  (acosf, sinhf, tanf, expf) disabled for some targets

2009-02-10 Raphael Neider <rneider AT web.de>

	* src/pic16/gen.c (pic16_freeAsmop): avoid NULL pointer dereference,
	  (genAssign): fixed for operands on the stack

	* device/lib/pic16/libc/stdio/vfprintf.c,