@@ -1,3 +1,8 @@
+2009-02-23 Jesus Calvino-Fraga <jesusc AT ece.ubc.ca>
+
+	* device/include/mcs51/at89c51ed2.h: Fixed address of SFR P5. Thanks
+	  to Steve Qu for the fix.
+
 2009-02-23 Borut Razem <borut.razem AT siol.net>
 
 	* as/z80/asexpr.c: fixed bug #1829678: Z-80 CP A,<xxx> assembly
